Update AMWA_ID for render

--- a/.render/_config.yml
+++ b/.render/_config.yml
@@ -3,10 +3,10 @@ theme: jekyll-theme-primer
 spec_server: specs.amwa.tv
 
 # AMWA ID
-amwa_id: INFO-AUTHORIZATION
+amwa_id: INFO-002
 
 # Base name for site (typically lower case version of AMWA ID, or the repo name)
-baseurl: /info-authorization
+baseurl: /info-002
 
 # Which release or branch appears in header links and on the home page
 default_tree: branches/main # alternatively e.g. releases/v1.0
